# Lightsail

./: .gitignore  CLAUDE.md  README.md  SiN_metasurface_analysis_relatedwork.docx  pyproject.toml
260419_results/: 11_ablation_summary.md  12_ablation_t280.md  13_phase3_bo_summary.md  14_mir_patch_scan.md  15_multi_material.md  16_validation_2d.md  17_robustness.md  18_robustness_tight.md  README.md  REPORT.html
configs/: default.yaml  stage1_hexagonal.yaml  stage1_pentagonal.yaml  stage1_rectangular.yaml  stage1_triangular.yaml  stage2_fmm.yaml  stage2_outer_grating.yaml
docs/: discussion_final.md  next_10h_plan.md  research_proposal_draft.md  ~$구종합보고서.docx  연구종합보고서.docx
scripts/: analyze_triangular_ensemble.py  collect_stage2_fmm_best.py  compare_lattice_families.py  demo.py  demo_rcwa.py  geometry_example.py  integrated_sail_analysis.py  nG_convergence_study.py  nir_window_scan.py  objectives_example.py  overnight_runner.py  regenerate_paper_figures.py  run_curvature_sweep.py  run_experiment.py  run_fab_tolerance.py  run_freeform_shape_only.py  run_full.py  run_graphene_scan.py  run_mfs500_sweep.py  run_paper_trajectory.py  run_period_tolerance.py  run_phase3_bo_trajectory.py  run_phase3_flat_scan.py  run_phase4_2d_validation.py  run_phase4_mir_patch_scan.py  run_phase4_multi_material.py  run_phase4_paper_figures.py  run_phase4_robustness.py  run_phase4_robustness_tight.py  run_sic_scan.py  run_stage1_1320_thin.py  run_stage1_1550_1850.py  run_stage1_1550_thin.py  run_stage1_T_direct_thin.py  run_stage1_disordered_thin.py  run_stage1_dual_hole_thin.py  (+13 more)
(+80 files in other folders)
